--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -56,15 +56,11 @@ setw -g window-status-current-attr reverse
 # Automatically set window title
 setw -g automatic-rename
 
-# use mouse 
-# More on mouse support http://floriancrouzat.net/2010/07/run-tmux-with-mouse-support-in-mac-os-x-terminal-app/
-setw -g mouse on
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
-# for tmux below 2.1
-# set -g mode-mouse on
-# set -g mouse-resize-pane on
-# set -g mouse-select-pane on
-# set -g mouse-select-window on
+if-shell "if [[ `tmux -V | cut -d' ' -f2` -lt 2.1  ]]; then true; else false; fi" \
+    'set -g mode-mouse on; set -g mouse-resize-pane on; set -g mouse-select-pane on; set -g mouse-select-window on'
+
+if-shell "if [[ `tmux -V | cut -d' ' -f2` -ge 2.1  ]]; then true; else false; fi" \
+    'set -g mouse on; set -g mouse-utf8 on set -g terminal-overrides "xterm*:smcup@:rmcup@"'
 
 # vi movement keys
 set-option -g status-keys vi
