--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -56,10 +56,10 @@ setw -g window-status-current-attr reverse
 # Automatically set window title
 setw -g automatic-rename
 
-if-shell "if [[ `tmux -V | cut -d' ' -f2` -lt 2.1  ]]; then true; else false; fi" \
+if-shell "if [[ `tmux -V | cut -d' ' -f2` < 2.1  ]]; then true; else false; fi" \
     'set -g mode-mouse on; set -g mouse-resize-pane on; set -g mouse-select-pane on; set -g mouse-select-window on'
 
-if-shell "if [[ `tmux -V | cut -d' ' -f2` -ge 2.1  ]]; then true; else false; fi" \
+if-shell "if [[ `tmux -V | cut -d' ' -f2` >= 2.1  ]]; then true; else false; fi" \
     'set -g mouse on; set -g mouse-utf8 on set -g terminal-overrides "xterm*:smcup@:rmcup@"'
 
 # vi movement keys
